--- a/promise.html
+++ b/promise.html
@@ -1,6 +1,15 @@
 <html>
     <body></body>
     <script>
+        /**
+         * 测试 Promise 语法
+         * /
+
+
+        /**
+        *
+        * @returns {Promise<Response>}
+        */
         function wxianfeng() {
             // return Promise object
             return fetch("http://wxianfeng.com")
